turtleart.circleying.CircleYing.scala.error
Compilation error:
CircleYing:18: error: not found: value baissecrayon
  baissecrayon();
  ^